@@ -1,3 +1,10 @@
+2002-03-10  Seth Nickell  <snickell@stanford.edu>
+
+	* main.c: (main):
+	* sound-properties-capplet.c: (main):
+
+	Activate the settings daemon if its not already running.
+	
 2002-03-07  Richard Hestilow  <hestilow@ximian.com>
 	
 	* sound-properties-capplet.c (main): Okay, so I'm an idiot.
